--- a/measures_descriptivestats_apa.Rmd
+++ b/measures_descriptivestats_apa.Rmd
@@ -7,8 +7,8 @@ author:
 - name: Paige Salters
 classoption: man
 output:
-  papaja::apa6_docx: default
   papaja::apa6_pdf: default
+  papaja::apa6_docx: default
 draft: no
 figurelist: no
 floatsintext: no
@@ -305,6 +305,8 @@ corr.test(lesbians %>% select(SocComp, Prosocial, Emotional, h12social, h12selfd
 corr.test(Goldberg_gav_sm %>% select(SocComp, Prosocial, Emotional, h12social, h12selfdir, h12conform))
 corr.test(straight_women %>% select(SocComp, Prosocial, Emotional, h12social, h12selfdir, h12conform))
 corr.test(straight_men %>% select(SocComp, Prosocial, Emotional, h12social, h12selfdir, h12conform))
+
+corr.test(Goldberg_gav_sm %>% filter(Partner == 1) %>% select(h12social, h12selfdir, h12conform))
 ```
 
 ```{r}
@@ -334,12 +336,20 @@ t.test(straight_women$w11RelDur,filter(lesbians, Partner == 1)[["w11RelDur"]])
   
 ```
 
-The current sample includes `r dim(Goldberg_gav_sm)[1]` participants and `r dim(Goldberg_gav_sm)[1] / 2`, including `r dim(lesbians)[1] / 2` female same-sex couples, `r dim(gays)[1] / 2` male same-sex couples, and `r dim(straight_women)[1]` heterosexual couples. The sample was determined by excluding any participants who did not have data for the primary variables of interest: Parental Values and Social Competence. Thus, any dyad that does not have information from both partners in the relevant variables was excluded.
 
-Out of the `r dim(Goldberg_gav_sm)[1]` participants, `r dim(filter(Goldberg_gav_sm, gender == 1))[1]` are female and `r dim(filter(Goldberg_gav_sm, gender == 2))[1]` are male. In this subset of participants, `r pluck(sexor_counts, 1, 4)`% (n = `r pluck(sexor_counts, 1, 3]`) identify as `r pluck(sexor_counts, 1, 2)`,  `r pluck(sexor_counts, 2, 4)`% (n = `r pluck(sexor_counts, 2, 3]`) identify as `r pluck(sexor_counts, 2, 2)`, `r pluck(sexor_counts, 3, 4)`% (n = `r pluck(sexor_counts, 3, 3]`) identify as `r pluck(sexor_counts, 3, 2)`,  `r pluck(sexor_counts, 4, 4)`% (n = `r pluck(sexor_counts, 4, 3]`) identify as `r pluck(sexor_counts, 4, 2)`, `r pluck(sexor_counts, 5, 4)`% (n = `r pluck(sexor_counts, 5, 3]`) identify as `r pluck(sexor_counts, 5, 2)`,  `r pluck(sexor_counts, 6, 4)`% (n = `r pluck(sexor_counts, 6, 3]`) identify as `r pluck(sexor_counts, 6, 2)`, and `r pluck(sexor_counts, 7, 4)`% (n = `r pluck(sexor_counts, 7, 3]`) identify as `r pluck(sexor_counts, 7, 2)`. 
 
-fix race
-This sample is rather well educated: `r education_counts[1, 4]`% (n = `education_counts[1, 3]`) have "`r education_counts[1, 4]`", `r education_counts[2, 4]`% (n = `education_counts[2, 3]`) have a "`r education_counts[2, 4]`", `r education_counts[3, 4]`% (n = `education_counts[3, 3]`) have "`r education_counts[3, 4]`", `r education_counts[4, 4]`% (n = `education_counts[4, 3]`) have a "`r education_counts[4, 4]`", `r education_counts[5, 4]`% (n = `education_counts[5, 3]`) have a "`r education_counts[5, 4]`", and `r education_counts[6, 4]`% (n = `education_counts[6, 3]`) have a "`r education_counts[6, 4]`".
+The current sample includes `r dim(Goldberg_gav_sm)[1]` participants and `r (dim(Goldberg_gav_sm)[1]) / 2`, including `r (dim(lesbians)[1]) / 2` female same-sex couples, `r (dim(gays)[1]) / 2` male same-sex couples, and `r dim(straight_women)[1]` heterosexual couples. The sample was determined by excluding any participants who did not have data for the primary variables of interest: Parental Values and Social Competence. Thus, any dyad that does not have information from both partners in the relevant variables was excluded.
+
+Out of the `r dim(Goldberg_gav_sm)[1]` participants, `r dim(filter(Goldberg_gav_sm, gender == 1))[1]` are female and `r dim(filter(Goldberg_gav_sm, gender == 2))[1]` are male. In this subset of participants, 
+`r pluck(sexor_counts, 4, 1)`% (n = `r pluck(sexor_counts, 3, 1)`) identify as `r pluck(sexor_counts, 2, 1)`,  
+`r pluck(sexor_counts, 4, 2)`% (n = `r pluck(sexor_counts, 3, 2)`) identify as `r pluck(sexor_counts, 2, 2)`, 
+`r pluck(sexor_counts, 4, 3)`% (n = `r pluck(sexor_counts, 3, 3)`) identify as `r pluck(sexor_counts, 2, 3)`,  
+`r pluck(sexor_counts, 4, 4)`% (n = `r pluck(sexor_counts, 3, 4)`) identify as `r pluck(sexor_counts, 2, 4)`, 
+`r pluck(sexor_counts, 4, 5)`% (n = `r pluck(sexor_counts, 3, 5)`) identify as `r pluck(sexor_counts, 2, 5)`, 
+`r pluck(sexor_counts, 4, 6)`% (n = `r pluck(sexor_counts, 3, 6)`) identify as `r pluck(sexor_counts, 2, 6)`, and 
+`r pluck(sexor_counts, 4, 7)`% (n = `r pluck(sexor_counts, 3, 7)`) identify as `r pluck(sexor_counts, 2, 7)`. 
+
+
 
 
 \newpage
