--- a/descriptivestats2_apa.Rmd
+++ b/descriptivestats2_apa.Rmd
@@ -163,14 +163,7 @@ sexor_counts <- counts_labels(Goldberg_gav_sm, "sexor")
 
 The current sample includes `r dim(Goldberg_gav_sm)[1]` participants and `r (dim(Goldberg_gav_sm)[1]) / 2`, including `r (dim(lesbians)[1]) / 2` female same-sex couples, `r (dim(gays)[1]) / 2` male same-sex couples, and `r dim(straight_women)[1]` heterosexual couples. The sample was determined by excluding any participants who did not have data for the primary variables of interest: Parental Values and Social Competence. Thus, any dyad that does not have information from both partners in the relevant variables was excluded.
 
-Out of the `r dim(Goldberg_gav_sm)[1]` participants, `r dim(filter(Goldberg_gav_sm, gender == 1))[1]` are female and `r dim(filter(Goldberg_gav_sm, gender == 2))[1]` are male. In this subset of participants,
-`r pluck(sexor_counts, 4, 1)`% (n = `r pluck(sexor_counts, 3, 1)`) identify as "`r pluck(sexor_counts, 2, 1)`",
-`r pluck(sexor_counts, 4, 2)`% (n = `r pluck(sexor_counts, 3, 2)`) identify as "`r pluck(sexor_counts, 2, 2)`",
-`r pluck(sexor_counts, 4, 3)`% (n = `r pluck(sexor_counts, 3, 3)`) identify as "`r pluck(sexor_counts, 2, 3)`",
-`r pluck(sexor_counts, 4, 4)`% (n = `r pluck(sexor_counts, 3, 4)`) identify as "`r pluck(sexor_counts, 2, 4)`",
-`r pluck(sexor_counts, 4, 5)`% (n = `r pluck(sexor_counts, 3, 5)`) identify as "`r pluck(sexor_counts, 2, 5)`",
-`r pluck(sexor_counts, 4, 6)`% (n = `r pluck(sexor_counts, 3, 6)`) identify as "`r pluck(sexor_counts, 2, 6)`", and
-`r pluck(sexor_counts, 4, 7)`% (n = `r pluck(sexor_counts, 3, 7)`) identify as "`r pluck(sexor_counts, 2, 7)`".
+Out of the `r dim(Goldberg_gav_sm)[1]` participants, `r dim(filter(Goldberg_gav_sm, gender == 1))[1]` are female and `r dim(filter(Goldberg_gav_sm, gender == 2))[1]` are male. In this subset of participants, `r pluck(sexor_counts, 4, 1)`% (n = `r pluck(sexor_counts, 3, 1)`) identify as "`r pluck(sexor_counts, 2, 1)`", `r pluck(sexor_counts, 4, 2)`% (n = `r pluck(sexor_counts, 3, 2)`) identify as "`r pluck(sexor_counts, 2, 2)`", `r pluck(sexor_counts, 4, 3)`% (n = `r pluck(sexor_counts, 3, 3)`) identify as "`r pluck(sexor_counts, 2, 3)`", `r pluck(sexor_counts, 4, 4)`% (n = `r pluck(sexor_counts, 3, 4)`) identify as "`r pluck(sexor_counts, 2, 4)`", `r pluck(sexor_counts, 4, 5)`% (n = `r pluck(sexor_counts, 3, 5)`) identify as "`r pluck(sexor_counts, 2, 5)`", `r pluck(sexor_counts, 4, 6)`% (n = `r pluck(sexor_counts, 3, 6)`) identify as "`r pluck(sexor_counts, 2, 6)`", and `r pluck(sexor_counts, 4, 7)`% (n = `r pluck(sexor_counts, 3, 7)`) identify as "`r pluck(sexor_counts, 2, 7)`".
 
 
 
